[package]
name = "swink-agent-evolve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Eval-driven self-improvement loop for swink-agent prompts and tool schemas"

[dependencies]
swink-agent      = { path = "..", version = "0.9.0", default-features = false }
swink-agent-eval = { path = "../eval", version = "0.9.0", default-features = false, features = ["judge-core"] }
serde            = { workspace = true }
serde_json       = { workspace = true }
tokio            = { workspace = true, features = ["macros", "rt", "sync"] }
tokio-util       = { workspace = true }
tracing          = { workspace = true }
regex            = { workspace = true }
rand             = { workspace = true }
sha2             = { workspace = true }
chrono           = { workspace = true }
thiserror        = { workspace = true }
opentelemetry    = { workspace = true, optional = true }

[dev-dependencies]
swink-agent      = { path = "..", version = "0.9.0", features = ["testkit"] }
tokio            = { workspace = true, features = ["full"] }
tempfile         = { workspace = true }
pretty_assertions = { workspace = true }

[features]
default = []
otel    = ["dep:opentelemetry"]
all     = ["otel"]
