[package]
name = "swink-agent-local-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Local on-device LLM inference for swink-agent using llama.cpp"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["llm", "local", "inference", "gguf", "embedding"]
categories = ["development-tools", "science"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
gemma4 = []
metal = ["llama-cpp-2/metal"]
cuda = ["llama-cpp-2/cuda"]
cudnn = ["cuda"]
vulkan = ["llama-cpp-2/vulkan"]

[dependencies]
swink-agent = { path = "..", version = "0.9.0", default-features = false }
llama-cpp-2 = "0.1"
hf-hub = { version = "0.5", features = ["tokio"] }
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-util.workspace = true
tokio-stream.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
swink-agent = { path = "..", default-features = false, features = ["testkit"] }
tokio = { workspace = true, features = ["full", "test-util"] }
pretty_assertions.workspace = true
tempfile.workspace = true

[lints]
workspace = true
