[package]
name = "swink-agent-local-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Local on-device LLM inference for swink-agent using llama.cpp"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["llm", "local", "inference", "gguf", "embedding"]
categories = ["development-tools", "science"]

[package.metadata.docs.rs]
features = ["gemma4"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
gemma4 = []
metal = ["llama-cpp-2/metal"]
cuda = ["llama-cpp-2/cuda"]
cudnn = ["cuda"]
vulkan = ["llama-cpp-2/vulkan"]

[dependencies]
swink-agent = { path = "..", version = "0.12.0", default-features = false }
llama-cpp-2 = "0.1.146"
# default-features off: hf-hub's defaults pull native-tls (→ OpenSSL, a C
# build dep) and ureq (a second, sync HTTP client). We only use the tokio
# async API, and rustls-tls keeps TLS on the same ring/rustls stack as the
# rest of the workspace — no C toolchain for `local` builds (#1110's goal).
hf-hub = { version = "0.5.0", default-features = false, features = ["tokio", "rustls-tls"] }
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-util.workspace = true
tokio-stream.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
swink-agent = { path = "..", default-features = false, features = ["testkit"] }
tokio = { workspace = true, features = ["full", "test-util"] }
pretty_assertions.workspace = true
tempfile.workspace = true

[lints]
workspace = true
