[package]
name = "swink-agent-local-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Local on-device LLM inference for swink-agent using llama.cpp"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["llm", "local", "inference", "gguf", "embedding"]
categories = ["development-tools", "science"]

[package.metadata.docs.rs]
features = ["gemma4"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
gemma4 = []
metal = ["llama-cpp-2/metal"]
cuda = ["llama-cpp-2/cuda"]
cudnn = ["cuda"]
vulkan = ["llama-cpp-2/vulkan"]

[dependencies]
swink-agent = { path = "..", version = "0.12.0", default-features = false }
llama-cpp-2 = "0.1.146"
# default-features off: hf-hub's defaults pull native-tls (→ OpenSSL, a C
# build dep) and ureq (a second, sync HTTP client). We only use the tokio
# async API, and rustls-tls keeps TLS on the same ring/rustls stack as the
# rest of the workspace — no C toolchain for `local` builds (#1110's goal).
#
# ACCEPTED DUPLICATION: hf-hub 0.5 pins reqwest 0.12, so this crate carries a
# second reqwest stack alongside the workspace's 0.13 (against the
# single-TLS-stack effort). hf-hub 1.0.0 (2026-07-10) does track reqwest 0.13,
# but it is a ground-up rewrite — the `api::tokio` module (whose `Api`,
# `ApiError`, and `Progress` trait src/progress.rs builds on) is gone and the
# `tokio` feature no longer exists — so the bump needs a dedicated migration,
# not a pin change. Until then this duplication is deliberate and contained
# to the optional local-llm crate.
hf-hub = { version = "0.5.0", default-features = false, features = ["tokio", "rustls-tls"] }
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-util.workspace = true
tokio-stream.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
swink-agent = { path = "..", default-features = false, features = ["testkit"] }
tokio = { workspace = true, features = ["full", "test-util"] }
pretty_assertions.workspace = true
tempfile.workspace = true

[lints]
workspace = true
