[package]
name = "swink-agent-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Proc macros for swink-agent: #[derive(ToolSchema)] and #[tool]"
license.workspace = true
repository.workspace = true
keywords = ["llm", "agent", "macros", "proc-macro", "tools"]
categories = ["development-tools", "development-tools::procedural-macro-helpers"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
swink-agent = { path = "..", default-features = false }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-util = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
