[package]
name = "swink-agent-mcp"
version = "0.7.0"
edition = "2024"
rust-version = "1.88"
description = "MCP (Model Context Protocol) integration for swink-agent"
license = "MIT"
repository = "https://github.com/SuperSwinkAI/Swink-Agent"
keywords = ["llm", "agent", "mcp", "tools", "protocol"]

[dependencies]
swink-agent = { path = "..", default-features = false }
rmcp = { version = "1.3", features = ["client", "client-side-sse", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "transport-child-process"] }
reqwest = { workspace = true }
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
rmcp = { version = "1.3", features = ["client", "server", "macros", "client-side-sse", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "transport-child-process", "transport-streamable-http-server"] }
swink-agent = { path = "..", default-features = false }
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-util = { workspace = true }
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
