[package]
name = "swink-agent-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "MCP (Model Context Protocol) integration for swink-agent"
license.workspace = true
repository.workspace = true
keywords = ["llm", "agent", "mcp", "tools", "protocol"]
categories = ["development-tools", "network-programming"]
readme = "README.md"

[dependencies]
swink-agent = { path = "..", version = "0.8.0", default-features = false }
rmcp = { version = "1.5", features = ["client", "client-side-sse", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "transport-child-process"] }
reqwest = { workspace = true }
futures.workspace = true
tokio = { workspace = true, features = ["macros", "process", "rt", "sync", "time"] }
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
sse-stream = "0.2"

[dev-dependencies]
axum = "0.8"
rmcp = { version = "1.5", features = ["client", "server", "macros", "client-side-sse", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "transport-child-process", "transport-streamable-http-server"] }
swink-agent = { path = "..", default-features = false }
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-util = { workspace = true }
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

[lints]
workspace = true
