[package]
name = "swink-agent-memory"
version = "0.7.5"
edition = "2024"
rust-version = "1.88"
description = "Session persistence and memory management for swink-agent"
license = "MIT"
repository = "https://github.com/SuperSwinkAI/Swink-Agent"
readme = "../README.md"
keywords = ["llm", "agent", "memory", "session", "context"]
categories = ["development-tools", "data-structures"]

[package.metadata.docs_rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
swink-agent = { path = "..", default-features = false }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
dirs.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
pretty_assertions.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
