[package]
name = "swink-agent-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Session persistence and memory management for swink-agent"
license.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["llm", "agent", "memory", "session", "context"]
categories = ["development-tools", "data-structures"]

[package.metadata.docs_rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
swink-agent = { path = "..", version = "0.8.0", default-features = false }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt"] }
dirs.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
pretty_assertions.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
