[package]
name = "swink-agent-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Session persistence and memory management for swink-agent"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["llm", "agent", "memory", "session", "context"]
categories = ["development-tools", "data-structures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
## Enables tantivy-backed full-text search index for `JsonlSessionStore`.
## Without this feature, `SessionStore::search()` falls back to the linear scan.
search = ["dep:tantivy"]

[dependencies]
swink-agent = { path = "..", version = "0.9.0", default-features = false }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt"] }
dirs.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
tantivy = { version = "0.26", optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
pretty_assertions.workspace = true
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[lints]
workspace = true
