[package]
name = "swink-agent-patterns"
version = "0.7.2"
edition = "2024"
rust-version = "1.88"
description = "Multi-agent pipeline patterns for swink-agent"
license = "MIT OR Apache-2.0"

[features]
default = ["pipelines"]
pipelines = []
testkit = ["swink-agent/testkit"]

[dependencies]
swink-agent = { path = "..", default-features = false }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex.workspace = true
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
