[package]
name = "swink-agent-patterns"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Multi-agent pipeline patterns for swink-agent"
license.workspace = true
repository.workspace = true
keywords = ["llm", "agent", "pipeline", "multi-agent", "orchestration"]
categories = ["development-tools", "asynchronous"]
readme = "../README.md"

[features]
default = ["pipelines"]
pipelines = []
testkit = ["swink-agent/testkit"]

[dependencies]
swink-agent = { path = "..", version = "0.8.0", default-features = false }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex.workspace = true
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
