[package]
name = "swink-agent-policies"
version = "0.4.2"
edition = "2024"
rust-version = "1.88"
description = "Policy implementations for swink-agent"
license = "MIT"
repository = "https://github.com/SuperSwinkAI/Swink-Agent"
keywords = ["llm", "agent", "policy", "security", "audit"]

[features]
default = []
full = ["all"]
all = ["budget", "max-turns", "deny-list", "sandbox", "loop-detection", "checkpoint", "prompt-guard", "pii", "content-filter", "audit"]
budget = []
max-turns = []
deny-list = []
sandbox = ["serde_json"]
loop-detection = ["serde_json"]
checkpoint = ["dep:tokio"]
prompt-guard = ["regex"]
pii = ["regex"]
content-filter = ["regex"]
audit = ["chrono", "serde", "serde_json", "unicode-truncate"]

[dependencies]
swink-agent = { path = ".." }
regex = { version = "1", optional = true }
chrono = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
unicode-truncate = { version = "2", optional = true }

[dev-dependencies]
futures = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-util = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
