[package]
name = "swink-agent-policies"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Policy implementations for swink-agent"
license.workspace = true
repository.workspace = true
keywords = ["llm", "agent", "policy", "security", "audit"]
categories = ["development-tools", "security"]
readme = "README.md"

[features]
default = ["all"]
full = ["all"]
all = ["budget", "max-turns", "deny-list", "sandbox", "loop-detection", "checkpoint", "prompt-guard", "pii", "content-filter", "audit"]
budget = []
max-turns = []
deny-list = []
sandbox = ["serde_json"]
loop-detection = ["serde_json"]
checkpoint = ["dep:tokio"]
prompt-guard = ["regex"]
pii = ["regex"]
content-filter = ["regex"]
audit = ["chrono", "serde", "serde_json", "unicode-truncate"]

[dependencies]
swink-agent = { path = "..", version = "0.8.0", default-features = false }
regex = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["rt"] }
tracing = { workspace = true }
unicode-truncate = { version = "2", optional = true }

[dev-dependencies]
swink-agent = { path = "..", default-features = false, features = ["testkit"] }
futures = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-util = { workspace = true }

[[example]]
name = "with_policies"
required-features = ["budget", "max-turns", "deny-list", "loop-detection"]

[lints]
workspace = true
