[package]
name = "swink-agent-tui"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Interactive terminal UI for swink-agent"
license = "MIT"
repository = "https://github.com/SuperSwinkAI/Swink-Agent"
readme = "../README.md"
keywords = ["tui", "terminal", "llm", "agent", "chat"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "swink_agent_tui"
path = "src/lib.rs"

[[bin]]
name = "swink"
path = "src/main.rs"

[dependencies]
swink-agent = { path = ".." }
swink-agent-adapters = { path = "../adapters" }
swink-agent-memory = { path = "../memory" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "html", "regex-onig"] }
futures = "0.3"
arboard = "3"
toml = "0.8"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
tokio-util = "0.7"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
