[package]
name = "swink-agent-tui"
version = "0.6.1"
edition = "2024"
rust-version = "1.88"
description = "Interactive terminal UI for swink-agent"
license = "MIT"
repository = "https://github.com/SuperSwinkAI/Swink-Agent"
readme = "../README.md"
keywords = ["tui", "terminal", "llm", "agent", "chat"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "swink_agent_tui"
path = "src/lib.rs"

[[bin]]
name = "swink"
path = "src/main.rs"

[dependencies]
swink-agent = { path = ".." }
swink-agent-adapters = { path = "../adapters", default-features = false, features = ["anthropic", "openai", "ollama", "proxy"] }
swink-agent-memory = { path = "../memory" }
swink-agent-local-llm = { path = "../local-llm", optional = true }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio.workspace = true
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "html", "regex-onig"] }
futures.workspace = true
arboard = "3"
toml = "0.9"
dirs = "6"
serde.workspace = true
serde_json.workspace = true
keyring = "3"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dotenvy.workspace = true
thiserror.workspace = true

[features]
default = []
full = ["local"]
local = ["dep:swink-agent-local-llm"]

[dev-dependencies]
swink-agent = { path = "..", features = ["testkit"] }
tempfile.workspace = true
tokio-util.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
