[package]
name = "swink-agent-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Interactive terminal UI for swink-agent"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["tui", "terminal", "llm", "agent", "chat"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "swink_agent_tui"
path = "src/lib.rs"

[[bin]]
name = "swink"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
swink-agent = { path = "..", version = "0.9.0", default-features = false, features = ["builtin-tools", "transfer"] }
swink-agent-adapters = { path = "../adapters", version = "0.9.0", default-features = false, features = ["anthropic", "openai", "ollama", "proxy"], optional = true }
swink-agent-memory = { path = "../memory", version = "0.9.0" }
swink-agent-local-llm = { path = "../local-llm", version = "0.9.0", optional = true }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "html", "regex-onig"] }
futures.workspace = true
arboard = "3"
toml.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
keyring = "3"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dotenvy.workspace = true
thiserror.workspace = true
tempfile.workspace = true

[features]
default = ["cli"]
cli = ["adapters"]
adapters = ["dep:swink-agent-adapters"]
full = ["local", "cli"]
local = ["dep:swink-agent-local-llm"]
remote = []

[[example]]
name = "custom_agent"
required-features = ["cli"]

[dev-dependencies]
swink-agent = { path = "..", default-features = false, features = ["testkit"] }
tokio-util.workspace = true

[lints]
workspace = true
