[package]
name = "xtask"
version = "0.7.1"
edition = "2024"
rust-version = "1.95"
publish = false
license = "MIT"

[dependencies]
swink-agent = { path = "..", default-features = false }
clap = { version = "4", features = ["derive"] }
futures.workspace = true
reqwest = { workspace = true, features = ["json", "query"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
