[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
license.workspace = true

[dependencies]
swink-agent = { path = "..", default-features = false }
clap = { version = "4", features = ["derive"] }
futures.workspace = true
reqwest = { workspace = true, features = ["json", "query"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
