[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
license.workspace = true

[dependencies]
swink-agent = { path = "..", default-features = false }
clap.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["json", "query"] }
# Supplies the `ring` crypto provider, installed as the process default
# before any reqwest client is built (workspace reqwest is
# `rustls-no-provider`; see the root Cargo.toml).
rustls.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
