[package]
name = "swink-agent-plugin-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Web browsing plugin for swink-agent: fetch, search, screenshot, extract"
license.workspace = true
repository.workspace = true
keywords = ["llm", "agent", "web", "browse", "search"]
categories = ["development-tools", "web-programming"]

[features]
default = ["duckduckgo"]
duckduckgo = []
brave = []
tavily = []
all = ["duckduckgo", "brave", "tavily"]

[dependencies]
swink-agent = { path = "../..", version = "0.12.0", default-features = false, features = ["plugins"] }
reqwest.workspace = true
# Supplies the `ring` crypto provider, installed as the process default
# before any reqwest client is built (workspace reqwest is
# `rustls-no-provider`; see the root Cargo.toml).
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "process", "rt", "sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
regex.workspace = true
url.workspace = true
base64 = "0.22.1"
scraper = "0.27.0"

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
pretty_assertions.workspace = true
tempfile.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt"] }

[lints]
workspace = true
